<resources>
    <string name="app_name">MakeStudyGroup</string>
<<<<<<< HEAD
    <string name="register_title">회원가입</string>
    <string name="loginEmail">E-mail :</string>
    <string name="loginPassword">PW :</string>
    <string name="loginButton">로그인</string>
    <string name="loginButton_register">회원가입</string>
    <string name="register_eamil">E-mail :</string>
    <string name="register_passwd">PW :</string>
    <string name="register_phone">Phone :</string>
    <string name="register_name">Name :</string>
    <string name="registerButton">가입하기</string>
    <string name="registerCancelButton">취소</string>
=======
    <string name="chat">text</string>
    <string name="first_room">first room</string>
    <string name="second_room">second room</string>
    <string name="third_room">third room</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="register_title">회원가입</string>

    <string name="loginEmail">E-mail :</string>

    <string name="loginPassword">PW :</string>

    <string name="loginButton">로그인</string>

    <string name="loginButton_register">회원가입</string>

    <string name="register_eamil">E-mail :</string>

    <string name="register_passwd">PW :</string>

    <string name="register_phone">Phone :</string>

    <string name="register_name">Name :</string>

    <string name="registerButton">가입하기</string>

    <string name="registerCancelButton">취소</string>

>>>>>>> jelcream
</resources>