<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- app:showAsAction="ifRoom" -->
    <item
        android:id="@+id/action_one"
        android:enabled="true"
        android:state_checked="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/first_room" />
    <item
        android:id="@+id/action_two"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/second_room" />
    <item
        android:id="@+id/action_three"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/third_room" />

    </menu>